--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,10 @@ Package: omneohealth
 Type: Package
 Title: An Implementation of the Oxford Maternal and Neonatal Health (OMNeoHealth) study in R
 Version: 0.1.0
-Authors@R: person("Ernest", "Guevarra", comment = c(ORCID = "0000-0002-4887-4415"), 
-    email = "ernestgmd@gmail.com", role = c("aut", "cre", "cph"))
+Authors@R: c(
+    person("Ernest", "Guevarra", comment = c(ORCID = "0000-0002-4887-4415"), 
+            email = "ernestgmd@gmail.com", role = c("aut", "cre", "cph")),
+    person("Proochista", "Ariana", email = proochista@gmail.com", role = c("aut", "cph")))
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: MIT + file LICENSE
