--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,18 @@ Version: 0.1.0
 Authors@R: c(
     person("Ernest", "Guevarra", comment = c(ORCID = "0000-0002-4887-4415"), 
             email = "ernestgmd@gmail.com", role = c("aut", "cre", "cph")),
-    person("Proochista", "Ariana", email = proochista@gmail.com", role = c("aut", "cph")))
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+    person("Proochista", "Ariana", email = proochista@gmail.com", role = c("aut", "cph")),
+    person("Sophie", "Janet", role = c("aut", "cph")))
+Description: The Oxford Maternal and Neonatal Health study aims to synthesise the
+    current evidence on maternal and neonatal health in various countries through
+    systematic collection of related secondary data from multiple sources. Then
+    based on this synthesis, gaps in knowledge and corresponding data are identified
+    in order to inform researchers on possible future areas of study. This package
+    brings together all the analytic functions created and used for this study.
 License: MIT + file LICENSE
+Imports: papuanewguinea
+Remotes: OMNeoHealth/papuanewguinea
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+
