--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,9 @@ Description: The Oxford Maternal and Neonatal Health study aims to synthesise th
     in order to inform researchers on possible future areas of study. This package
     brings together all the analytic functions created and used for this study.
 License: MIT + file LICENSE
-Imports: papuanewguinea
+Imports: papuanewguinea,
+    tidyverse,
+    tidytext
 Remotes: OMNeoHealth/papuanewguinea
 Encoding: UTF-8
 LazyData: true
