--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Authors@R: c(
     person("Ernest", "Guevarra", comment = c(ORCID = "0000-0002-4887-4415"), 
             email = "ernestgmd@gmail.com", role = c("aut", "cre", "cph")),
-    person("Proochista", "Ariana", email = proochista@gmail.com", role = c("aut", "cph")),
+    person("Proochista", "Ariana", email = "proochista@gmail.com", role = c("aut", "cph")),
     person("Sophie", "Janet", role = c("aut", "cph")))
 Description: The Oxford Maternal and Neonatal Health study aims to synthesise the
     current evidence on maternal and neonatal health in various countries through
