--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: The Oxford Maternal and Neonatal Health study aims to synthesise th
     based on this synthesis, gaps in knowledge and corresponding data are identified
     in order to inform researchers on possible future areas of study. This package
     brings together all the analytic functions created and used for this study.
-License: MIT + file LICENSE
+License: GPL-3
 Imports: papuanewguinea
 Remotes: OMNeoHealth/papuanewguinea
 Encoding: UTF-8
